--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "typescript": "4.7.2",
+    "babel-jest": "^27.3.1"
   }
 }
